--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pet API.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/*.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,33 @@
   "bugs": {
     "url": "https://github.com/ProjetoPets/api/issues"
   },
-  "homepage": "https://github.com/ProjetoPets/api#readme"
+  "homepage": "https://github.com/ProjetoPets/api#readme",
+  "dependencies": {
+    "body-parser": "1.15.0",
+    "cors": "2.7.1",
+    "express": "4.13.4",
+    "helmet": "1.3.0",
+    "md5": "2.1.0",
+    "moment": "2.15.2",
+    "pg": "4.5.1",
+    "pg-hstore": "2.3.2",
+    "ramda": "0.19.1",
+    "randomstring": "1.1.5",
+    "request": "2.78.0",
+    "request-promise": "4.1.1",
+    "sendgrid": "3.0.5",
+    "sequelize": "3.20.0"
+  },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "grunt": "0.4.5",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-jscs": "2.8.0",
+    "grunt-mocha-istanbul": "3.0.1",
+    "grunt-mocha-test": "0.12.7",
+    "istanbul": "0.4.2",
+    "jscs": "2.11.0",
+    "mocha": "2.4.5",
+    "supertest": "1.2.0"
+  }
 }
