--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "request": "2.78.0",
     "request-promise": "4.1.1",
     "sendgrid": "3.0.5",
-    "sequelize": "3.20.0"
+    "sequelize": "3.20.0",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
